--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.79",
+    "gatsby": "^2.27.3",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.33",
@@ -22,8 +22,13 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/react-dom": "^16.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint": "^7.11.0",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "typescript": "^4.1.2",
+    "gatsby-cli": "2.14.0"
   },
   "keywords": [
     "gatsby"
