--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   },
   "devDependencies": {
     "@types/react-dom": "^16.0.0",
+    "@types/styled-components": "^5.1.4",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint": "^7.11.0",
+    "gatsby-cli": "2.14.0",
     "prettier": "2.1.2",
-    "typescript": "^4.1.2",
-    "gatsby-cli": "2.14.0"
+    "typescript": "^4.1.2"
   },
   "keywords": [
     "gatsby"
